# hotel-reservation-databricks-free

./: .env.template  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING  LICENCE  README.md  Taskfile.yml  Taskfiles.md  databricks.yml  devbox.json  project_config.yml  pyproject.toml
.github/: CODEOWNERS
.gitlab/: .gitlab-ci.yml
app/: app.py
docs/reports/powerbi/src/: Hotel Reservation - Dashboard.pbip
docs/reports/powerbi/src/Hotel Reservation - Dashboard.Report/: .platform  definition.pbir
docs/reports/powerbi/src/Hotel Reservation - Dashboard.Report/.pbi/: localSettings.json
docs/reports/powerbi/src/Hotel Reservation - Dashboard.Report/StaticResources/RegisteredResources/: Keyrus9427870617212458.json
docs/reports/powerbi/src/Hotel Reservation - Dashboard.Report/StaticResources/SharedResources/BaseThemes/: CY24SU10.json
docs/reports/powerbi/src/Hotel Reservation - Dashboard.Report/definition/: report.json  version.json
docs/reports/powerbi/src/Hotel Reservation - Dashboard.Report/definition/pages/: pages.json
docs/reports/powerbi/src/Hotel Reservation - Dashboard.Report/definition/pages/00f5020b56f31bb5cbab/: page.json
docs/reports/powerbi/src/Hotel Reservation - Dashboard.Report/definition/pages/28986aea68a994571065/: page.json
docs/reports/powerbi/src/Hotel Reservation - Dashboard.Report/definition/pages/33b66392423c7ce0a1b7/: page.json
docs/reports/powerbi/src/Hotel Reservation - Dashboard.Report/definition/pages/397fe42d0ebbb536362f/: page.json
docs/reports/powerbi/src/Hotel Reservation - Dashboard.Report/definition/pages/5a3284ec9346cb7d7d9e/: page.json
docs/reports/powerbi/src/Hotel Reservation - Dashboard.Report/definition/pages/672c310386a36f68f69a/: page.json
docs/reports/powerbi/src/Hotel Reservation - Dashboard.Report/definition/pages/92102e0416ded6d3d5d8/: page.json
docs/reports/powerbi/src/Hotel Reservation - Dashboard.Report/definition/pages/b74379dabc69cb0eeab2/: page.json
docs/reports/powerbi/src/Hotel Reservation - Dashboard.Report/definition/pages/bf62ab52d44273ec15b9/: page.json
docs/reports/powerbi/src/Hotel Reservation - Dashboard.SemanticModel/: .platform  definition.pbism  diagramLayout.json
docs/reports/powerbi/src/Hotel Reservation - Dashboard.SemanticModel/.pbi/: cache.abf  editorSettings.json  localSettings.json
docs/reports/powerbi/src/Hotel Reservation - Dashboard.SemanticModel/definition/: database.tmdl  expressions.tmdl  model.tmdl  relationships.tmdl
docs/reports/powerbi/src/Hotel Reservation - Dashboard.SemanticModel/definition/cultures/: en-US.tmdl
docs/reports/powerbi/src/Hotel Reservation - Dashboard.SemanticModel/definition/tables/: DateTableTemplate_cbc11344-7f94-41d1-a0bc-1e4cd69cf697.tmdl  FACT_HISTORY.tmdl  FACT_PREDICTION.tmdl  FACT_UPDATE.tmdl  LocalDateTable_2b5e1bbb-3273-4924-86e3-daa7fbe74064.tmdl  LocalDateTable_b7656b8e-429a-43b3-84bb-ec1aceaa4f46.tmdl  LocalDateTable_dce7ec6a-bbc1-4b77-b9fd-c1dc6f998928.tmdl  LocalDateTable_e7ad21d8-ea43-439b-b022-c25b8213f02b.tmdl  MEASURE.tmdl  PARAM_AXIS_ANALYSIS_1.tmdl  PARAM_AXIS_ANALYSIS_2.tmdl  PARAM_AXIS_ANALYSIS_3.tmdl
notebooks/: deploy_basic_model_serving.py  deploy_custom_model_serving.py  predict_basic_model.py  predict_custom_model.py  predict_fe_model.py  train_register_fe_model.py
notebooks/utils/: run_cleanup_data.py
resources/: bundle_monitoring.yml  continuous_prediction.yml  initial_training_basic_model.yml  initial_training_custom_model.yml  weekly_training_basic_model.yml  weekly_training_custom_model.yml
scripts/: 03.b.deploy_custom_model_serving.py  03.deploy_model_serving.py
src/hotel_reservation/serving/: model_serving.py
tests/functional/: example.http
wiki-content/: Free-Edition-Adaptation.md
(+156 files in other folders)
